# EspAudioTester

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/: lv_conf.h
components/st7789/: disp_spi.c  disp_spi.h  st7789.c  st7789.h
components/ui/: ui.c  ui.h  ui_comp.c  ui_comp.h  ui_img_accept_png.c  ui_img_headphone_png.c  ui_img_indicator_ver_png.c  ui_img_mic_png.c  ui_img_mixer_png.c  ui_img_pause_png.c  ui_img_play_png.c  ui_img_pot_ver_knob_png.c  ui_img_rec_png.c  ui_img_speaker_png.c  ui_img_stop_png.c  ui_img_xlr_png.c
main/: CMakeLists.txt  main.c  main.h
main/button/: button.c  button.h
main/codec/: sd_card.c  sd_card.h  wav.c  wav.h  wm8960.c  wm8960.h
main/encoder/: encoder.c  encoder.h
main/ui_controls/: ui_controls.c  ui_controls.h
